--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,64 +22,65 @@ dependencies:
     sdk: flutter
   adaptive_action_sheet: ^2.0.1
   provider: ^6.0.1
-  intl: any
+  intl: ^0.17.0
   get_it: ^7.2.0
   dotted_border: ^2.0.0+2
-  flutter_svg: ^2.0.6
-  image_picker: ^0.8.5+3
-  file_picker: ^5.3.0
+  flutter_svg: ^1.0.0
+  image_picker: ^0.8.8
+  file_picker: ^5.2.7
   tencent_super_tooltip: ^0.0.1
   video_player: ^2.4.2
-  chewie_for_us: ^1.5.0
+  chewie: ^1.3.2
   flutter_slidable_for_tencent_im: ^1.4.0
-  flutter_plugin_record_plus: ^0.0.16
-  azlistview_all_platforms: ^2.1.2
+  flutter_plugin_record_plus: ^0.0.15
+  azlistview: ^2.0.0
   lpinyin: ^2.0.3
   transparent_image: ^2.0.0
-  image_gallery_saver: ^2.0.1
+  video_thumbnail: ^0.5.2
+  image_gallery_saver: ^1.7.1
+  photo_view: ^0.14.0
   path_provider: ^2.0.8
+  characters: ^1.1.0
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.13
+  json_annotation: ^4.4.0
+  js: ^0.6.3
   scroll_to_index: ^2.1.1
   wechat_assets_picker: ^8.5.0
   wechat_camera_picker: ^3.8.0
   flutter_easyrefresh: ^2.2.1
-  extended_image: ^8.0.1
+  flutter_spinkit: ^5.1.0
+  extended_image: ^8.0.2
   extended_text_field: ^12.0.0
-  extended_text: ^11.0.0
-  package_info_plus: ^4.0.1
+  extended_text: ^11.0.1
+  package_info_plus: ^1.4.0
   loading_animation_widget: ^1.1.0+3
-  permission_handler: ^10.2.0
+  permission_handler: ^10.0.0
   tuple: ^2.0.0
-  flutter_markdown: ^0.6.15
+  flutter_markdown: ^0.6.9
   url_launcher: ^6.1.4
-  universal_html: ^2.2.2
+  universal_html: ^2.0.8
   link_preview_generator: ^1.2.0
+  tencent_im_base: ^1.0.26
+  disk_space: ^0.2.1
   http: ^0.13.5
   crypto: ^3.0.2
   collection: ^1.15.0
   flutter_image_compress: ^1.1.3
   uuid: ^3.0.6
-  tencent_open_file: ^4.0.10
+  tencent_open_file: ^4.0.9
   tencent_keyboard_visibility: ^1.0.1
-  tim_ui_kit_sticker_plugin: ^2.0.1
-  tencent_im_base: ^1.0.57
-  fc_native_video_thumbnail: any
-  audioplayers: ^3.0.1
-  path: ^1.8.1
-  tencent_cloud_uikit_core: ^1.0.2
-  pasteboard: ^0.2.0
-  desktop_drop: ^0.4.1
-  device_info_plus: any
-  cross_file: ^0.3.3+4
-  csslib: 0.17.2
-  diff_match_patch: ^0.4.1
+  tim_ui_kit_sticker_plugin: ^1.2.0
+
+dependency_overrides:
+  ffi: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
   build_runner: any
   fast_i18n: ^5.12.2
   lints: ^1.0.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -89,7 +90,6 @@ flutter:
   uses-material-design: true
   assets:
     - images/
-    - images/svg/
     # - assets/custom_face_resource/4349/
 
   # To add assets to your package, add an assets section, like this:
